Added Sample Map and simple movement