@@ -1,2 +1,2 @@
 #! /bin/bash
-java -cp build/classes:build/classes/lib/jar/sira.jar Main
+java -verbose:gc -Xlog:gc* -cp build/classes:build/classes/lib/jar/sira.jar Main
